<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llSearchBar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="24dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/search"
            android:drawableStart="@drawable/search_icon"
            android:paddingHorizontal="20dp"
            android:drawablePadding="8dp"
            android:layout_weight="5"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_shape"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/small_icon"
            android:layout_weight="1"
            android:background="@drawable/button_shape"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgOil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSearchBar"
        android:src="@drawable/oil"
        android:padding="14dp"
        android:layout_marginTop="16dp"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llTwoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/imgOil"
        app:layout_constraintTop_toBottomOf="@id/imgOil"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="11dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/official_store"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginHorizontal="5dp"
            android:minHeight="30dp"
            android:paddingHorizontal="15dp"
            android:textSize="15sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue_shape"
            android:minHeight="30dp"
            android:layout_marginHorizontal="5dp"
            android:paddingHorizontal="15dp"
            android:text="@string/free_delivery"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llTwoButton"
        app:layout_constraintStart_toStartOf="@id/llTwoButton"
        app:layout_constraintEnd_toEndOf="@id/imgOil"
        android:text="@string/discusses_the_factors"
        android:textColor="#808080"
        android:textSize="15sp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvText"
        app:layout_constraintTop_toBottomOf="@id/tvText"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="11dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/newPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_120"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/oldPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_149"
            android:layout_marginHorizontal="9dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etOffers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        app:layout_constraintStart_toStartOf="@id/imgOil"
        app:layout_constraintEnd_toEndOf="@id/imgOil"
        android:hint="@string/offers"
        android:textColorHint="@color/white"
        android:paddingHorizontal="10dp"
        android:textSize="15sp"
        android:background="@drawable/offers_edit_text_shape"
        android:layout_marginTop="20dp"
        android:minHeight="43dp"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/etOffers"
        app:layout_constraintStart_toStartOf="@id/llSearchBar"
        app:layout_constraintEnd_toEndOf="@id/llSearchBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner_background"
            android:paddingHorizontal="12dp"
            android:layout_marginBottom="32dp"
            android:elevation="2dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    android:layout_marginEnd="12dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/various_installment_options"
                    android:textSize="14sp"
                    android:textColor="#000000" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    android:layout_marginEnd="12dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monthly_installment"
                    android:textSize="14sp"
                    android:textColor="#000000" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    android:layout_marginEnd="12dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jumia_birthday"
                    android:textSize="14sp"
                    android:textColor="#000000" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/add_to_cart"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_shape"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_marginEnd="12dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_phone"
                android:background="@drawable/orange_icon_background"
                android:layout_marginEnd="8dp"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_home"
                android:background="@drawable/orange_icon_background"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>