<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/cart"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="35dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/shoppingCartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/shopping_cart_icon"
        android:layout_marginBottom="300dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDiscusses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoppingCartIcon"
        android:text="@string/discusses_the_factors"
        android:layout_marginHorizontal="32dp"
        android:textSize="15sp"
        android:layout_marginVertical="30dp"
        android:textColor="#5B5959"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiscusses"
        android:layout_marginTop="42dp"
        android:textAllCaps="false"
        android:background="@drawable/button_shape"
        android:paddingHorizontal="100dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/start_shopping"/>

</androidx.constraintlayout.widget.ConstraintLayout>